# meson_starter_pack

./: .clag-tidy  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  conanfile.txt  dockerfile  meson.build  meson.ini  meson_test.cpp
config/: config.json  meson.build
docs/: Doxyfile.in  meson.build
include/: config.hpp  core.hpp  log.hpp
pch/: pch.cpp  pch.hpp
scripts/: compile.sh  conan_install.sh  doxygen.sh  meson_compile.sh  meson_install.sh  meson_setup.sh  meson_test.sh  setup.sh
scripts/cross/: arch_install.sh  cross-arm64.ini  cross-arm64.sh  cross-riscv64.ini  cross-riscv64.sh  cross-win64.sh
scripts/cross/arm64/: cross-arm64.sh
scripts/cross/mac/: conan-mac.ini  conan_install.sh
scripts/cross/macOS/: conan_install.sh
scripts/cross/riscv64/: cross-riscv64.ini  cross-riscv64.sh
scripts/cross/win64/: conan-win64.ini  conan_install.sh  cross-win64.ini  cross-win64.sh
src/: config.cpp  log.cpp  main.cpp
tests/: factorial.cpp  main.cpp  meson.build
windows/: manifest.in  meson.build  rc.in  resources.h
